--- a/src/index.css
+++ b/src/index.css
@@ -29,8 +29,26 @@
   }
 }
 
+
+
+/* custom scrollbar */
 body::-webkit-scrollbar {
-  display: none;
+  width: 20px;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #000
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #e14e09;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
 }
 
 .header-course {
