--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 body::-webkit-scrollbar-thumb:hover {
-  background-color: #a8bbbf;
+  background-color: #3cffff;
 }
 
 .header-course {
